--- a/index.html
+++ b/index.html
@@ -2,34 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Name – Portfolio</title>
+  <title>Amanbay Makhabbat Assylbekkyzy – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Industrial Design · Brain & Cognitive Sciences</p>
+    <h1>Amanbay Makhabbat Assylbekkyzy</h1>
+    <p>Industrial Design student at KAIST</p>
   </header>
 
   <main>
     <section class="project">
       <img src="p1.png" alt="Project 1">
-      <h2>Project One</h2>
-      <p>Short description of the project. One or two sentences.</p>
+      <h2>[P1] Small Multiples</h2>
+      <h2>World Flavors Blended on Kazakh Dastarkhan</h2>
+      <p>This poster illustrates the richness of Kazakh cuisine in its diversity and each nation’s significance on our sacred dastarkhan. There are mainly dishes from various countries deeply woven into our daily eating habits, ones I especially love and miss, as well as some of the irreplaceable and significant dishes of authentic Kazakh cuisine, without which dastarkhan wouldn’t be complete. </p>
     </section>
 
     <section class="project">
       <img src="p2.png" alt="Project 2">
-      <h2>Project Two</h2>
-      <p>Short description of the project. One or two sentences.</p>
+      <h2>[P2] Infographics</h2>
+      <h2>Gen Z Trapped: Infinite Scrolls, Clicks, Fatigue</h2>
+      <p>As someone suffering from doomscrolling, I decided to make a useful inforgraphic on doomscrolling.</p>
     </section>
 
     <section class="project">
       <img src="p3.png" alt="Project 3">
-      <h2>Project Three</h2>
-      <p>Short description of the project. One or two sentences.</p>
+      <h2>[P3] Data Visualization</h2>
+      <h2>NCT U Network</h2>
+      <p>Connections of NCT U collaborations</p>
     </section>
   </main>
 
