--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
       <img src="p2.png" alt="Project 2">
       <h2>[P2] Infographics</h2>
       <h2>Gen Z Trapped: Infinite Scrolls, Clicks, Fatigue</h2>
-      <p>As someone suffering from doomscrolling, I decided to make a useful inforgraphic on doomscrolling.</p>
+      <p>This infographic examines doomscrolling as a behavioral pattern common among Gen Z. Using clear visual hierarchy and data-driven elements, the project communicates how infinite scrolling designs contribute to cognitive fatigue and compulsive media consumption.</p>
     </section>
 
     <section class="project">
       <img src="p3.png" alt="Project 3">
       <h2>[P3] Data Visualization</h2>
       <h2>NCT U Network</h2>
-      <p>Connections of NCT U collaborations</p>
+      <p>This project visualizes collaboration patterns within NCT U by mapping connections between members across different releases. The network structure reveals central figures, frequency of collaboration, and how the group’s flexible unit system operates over time.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Makhabbat</p>
   </footer>
 
   <script src="script.js"></script>
