--- a/index.html
+++ b/index.html
@@ -17,29 +17,37 @@
     <section class="project">
       <img src="p1.png" alt="Project 1">
       <h2>[P1] Small Multiples</h2>
-      <h2>World Flavors Blended on Kazakh Dastarkhan</h2>
-      <p>This poster illustrates the richness of Kazakh cuisine in its diversity and each nation’s significance on our sacred dastarkhan. There are mainly dishes from various countries deeply woven into our daily eating habits, ones I especially love and miss, as well as some of the irreplaceable and significant dishes of authentic Kazakh cuisine, without which dastarkhan wouldn’t be complete. </p>
+      <h3>World Flavors Blended on Kazakh Dastarkhan</h3>
+      <p>
+        This poster uses a small-multiples approach to visualize the diversity of foods
+        present on a traditional Kazakh dastarkhan, highlighting cultural exchange and
+        essential national dishes.
+      </p>
     </section>
 
     <section class="project">
       <img src="p2.png" alt="Project 2">
       <h2>[P2] Infographics</h2>
-      <h2>Gen Z Trapped: Infinite Scrolls, Clicks, Fatigue</h2>
-      <p>This infographic examines doomscrolling as a behavioral pattern common among Gen Z. Using clear visual hierarchy and data-driven elements, the project communicates how infinite scrolling designs contribute to cognitive fatigue and compulsive media consumption.</p>
+      <h3>Gen Z Trapped: Infinite Scrolls, Clicks, Fatigue</h3>
+      <p>
+        This infographic explores doomscrolling as a Gen Z behavioral pattern and shows
+        how infinite scrolling interfaces contribute to cognitive fatigue.
+      </p>
     </section>
 
     <section class="project">
       <img src="p3.png" alt="Project 3">
       <h2>[P3] Data Visualization</h2>
-      <h2>NCT U Network</h2>
-      <p>This project visualizes collaboration patterns within NCT U by mapping connections between members across different releases. The network structure reveals central figures, frequency of collaboration, and how the group’s flexible unit system operates over time.</p>
+      <h3>NCT U Network</h3>
+      <p>
+        A network visualization mapping collaboration patterns within NCT U, revealing
+        connection density and key members across releases.
+      </p>
     </section>
   </main>
 
   <footer>
     <p>© 2025 Makhabbat</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
